--- a/assets/css/Home.css
+++ b/assets/css/Home.css
@@ -3,7 +3,7 @@
      width:100%;
      height: 620px;
     padding:50px 0px 80px 0px;
-    background: #000000 url("../img/background.png") no-repeat center;
+    background: #000000 url("../img/background.png") no-repeat;
     opacity: 0.85 ;
     border-top-left-radius:40px;
     border-bottom-left-radius:40px;
@@ -15,6 +15,9 @@
     font-weight: bold;
     padding-right: 50px;
 
+}
+.HomeSection .navbar-nav .nav-link {
+    padding-left: 17px;
 }
 
 .IconBackground a{
@@ -165,8 +168,65 @@ a.active{
     color:#000000;
     font-size: 20px;
 }
+.comments h5{
+    color:#A5A6AD;
+    font-size: 18px;
+
+}
+.comments ul li a{
+    color:#A5A6AD;
+    font-size: 18px;
+
+}
+.comments ul li a:hover{
+    color:red;
+   
+
+}
 
 @media (max-width: 992px) { 
-  
+    .navbar-light .navbar-nav .nav-link,.IconHead li {
+        font-size:14px;
+    }
+.logoSection img{       
+        padding-right: 60%;
+        margin-top:65px;
+    }
+.imgAd img{
+        margin-top:10px;
+        padding-right: 40%;
+        margin-bottom:15px;
+
+    
+    }
+    .Navbar2{
+        width:150%;
+
+    }
+    .colorNav {
+        font-size: 25px;
+        padding-left: 20px;
+        margin-right: -15px;
+    }
+    .HomeSection {
+        width: 150%;
+       
+    }
+    .commentSection h5 {
+       
+        font-size: 14px;
+        margin-top:10px;
+
+    }
+    .commentSection span{
+        font-size: 14px;
+        padding:5px 10px;
+        right: 14px;
+        top: 85px;
+        border-bottom-right-radius: 15px;
+    }
+.footerSection {
+    width: 150%;
+}
 
 }
