--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,42 +128,13 @@ body{
     width: 240px;
     height: 250px;
 }
-.card-title {
-    color: #173460;
-}
 
-.card-text{
-    color: #A5A6AD;
-    font-size: 13px;
+.mainSection{
+    margin-right: 80px;
 }
-.card a{
-    color: #A5A6AD;
-    font-size: 13px;
-}
-.card-body  .navbar-nav  {
-    margin-right: -40px;
-}
-.card a.active{
-    color:yellow;
-}
-.card a:hover{
-    color:yellow;
-}
-.card span{
-    color: #A5A6AD;
-    font-size: 13px;
-}
-
-
-.End-Card{
-    margin-top: 110px;
-    margin-right:-40px;
-
-}
-.Imgadd7{
-    widows: 400px;
-    margin-right: -20px;
-
+.mainSection .triangle{
+    
+    border: 1px solid red;
 }
 
 @media (max-width: 992px) { 
