--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ body{
 .mainSection .triangle{
     height: 250px;
     width: 450px;
-    border: 1px solid red;
+    border: 1px solid rgb(212, 215, 236);
 }
 .mainSection .triangle h2{
   font-size: 18px;
@@ -132,12 +132,26 @@ font-size: 14px;
 color: #A5A6AD;
 }
 .mainSection .triangle ul {
-    margin-right: -32px;
+    margin-right: -22px;
 }
 .mainSection .triangle ul li a.active,.mainSection .triangle ul li a:hover{
     
     color: yellow;
  }
+ .mainSection .triangle img{
+   position: relative;
+}
+.mainSection .triangle .float-left span{
+    font-size: 16px;
+    color: #FFFFFF;
+    background: #FF6565;
+    position: absolute;
+    padding:5px 15px;
+    right: 250px;
+    top: 10px;
+    border-radius: 5px;
+ }
+
  .mainSection .triangle .infoDesc{
      width:200px;
      height: 70px;
@@ -148,6 +162,46 @@ color: #A5A6AD;
     font-size: 12px;
     color: #A5A6AD;
     }
+.mainSection .triangle span,a{
+        font-size: 13px;
+        color: #A5A6AD;
+    }
+ .mainSection .triangle  .iconLeft a{
+        font-size: 13px;
+        color: #A5A6AD;
+        padding-left: 5px;
+    }
+ .lastLine{
+        margin-top:70px;
+    }
+.mainSection .health h2{
+        font-weight: bold;
+        color:#173460;
+        font-size: 20px;
+    
+    
+    }
+
+.health h3{
+        font-weight: bold;
+        color:#173460;
+        font-size: 16px;
+    }
+    .health img{
+        position: relative;
+    
+    }
+    .health span{
+        font-size: 16px;
+        color: #FFFFFF;
+        background: #218FC2;
+        position: absolute;
+        padding:5px 15px;
+        right: 150px;
+        top: 180px;
+        border-radius: 5px;
+    }
+
 
 
 
